--- a/DumbledroidExample/res/values/styles.xml
+++ b/DumbledroidExample/res/values/styles.xml
@@ -1,11 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
-    <style name="textTitle" parent="android:Widget.Holo.TextView">
-        <item name="android:textColor">#FFF</item>
-        <item name="android:textSize">14sp</item>
+
+    <!--
+        Base application theme, dependent on API level. This theme is replaced
+        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
+    -->
+    <style name="AppBaseTheme" parent="android:Theme.Light">
+        <!--
+            Theme customizations available in newer API levels can go in
+            res/values-vXX/styles.xml, while customizations related to
+            backward-compatibility can go here.
+        -->
     </style>
-    <style name="textResult" parent="android:Widget.Holo.TextView">
-        <item name="android:textColor">#84D600</item>
+
+    <!-- Application theme. -->
+    <style name="AppTheme" parent="AppBaseTheme">
+        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+    </style>
+
+    <style name="textTitle" parent="android:Widget.Holo.TextView">
+        <item name="android:textColor">#000</item>
         <item name="android:textSize">16sp</item>
     </style>
+
+    <style name="textResult" parent="android:Widget.Holo.TextView">
+        <item name="android:textColor">#0099CC</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
 </resources>
