--- a/DumbledroidExample/res/layout/jedi.xml
+++ b/DumbledroidExample/res/layout/jedi.xml
@@ -4,7 +4,7 @@
     android:layout_height="fill_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".activities.Jedi" >
+    tools:context=".activities.JediActivity" >
 
     <TextView
         style="@style/textTitle"
