--- a/DumbledroidExample/res/layout/main.xml
+++ b/DumbledroidExample/res/layout/main.xml
@@ -30,6 +30,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:onClick="onTwitterClicked"
-        android:text="Twitter search (advanced JSON)" />
+        android:text="Flickr search (advanced JSON)" />
 
 </LinearLayout>
