--- a/DumbledroidExample/res/layout/sith.xml
+++ b/DumbledroidExample/res/layout/sith.xml
@@ -4,7 +4,7 @@
     android:layout_height="fill_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".activities.Sith" >
+    tools:context=".activities.SithActivity" >
 
     <TextView
         style="@style/textTitle"
