Adds image loading to the adapter.

--- a/DumbledroidExample/res/layout/flickr_search.xml
+++ b/DumbledroidExample/res/layout/flickr_search.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:ems="10"
-        android:hint="Ex.: android" >
+        android:hint="Ex.: sunset" >
 
         <requestFocus />
     </EditText>
